spacing fixes

--- a/src/index.css
+++ b/src/index.css
@@ -33,16 +33,18 @@ Global Styles
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   color: var(--mainBlack);
   background: var(--mainBackground);
   line-height: 1.4;
   font-size: 1rem;
   font-weight: 300;
+  width: 100%;
 }
 h1,
 h2,
@@ -150,15 +152,15 @@ Navbar
 .nav-links {
   display: flex;
   align-items: center;
+  text-align: center;
 }
 .nav-links a {
   text-transform: capitalize;
   display: inline-block;
   font-weight: bold;
-  margin-right: 0.5rem;
   font-weight: 400;
   letter-spacing: 2px;
-  font-size: 1.2rem;
+  font-size: 1rem;
   padding: 0.25rem 0.5rem;
   transition: var(--mainTransition);
 }
@@ -166,7 +168,8 @@ Navbar
   color: var(--primaryColor);
 }
 .logo {
-  width: 12rem;
+  width: 10rem;
+  margin-bottom: 0.1rem;
 }
 /* 
 ====== 
@@ -375,7 +378,7 @@ Cocktail
 .loader:after {
   position: absolute;
   top: 0;
-  content: '';
+  content: "";
 }
 .loader:before {
   left: -1.5em;
